Fix dark mode color issues

--- a/src/content-script/styles.css
+++ b/src/content-script/styles.css
@@ -2,7 +2,6 @@
   margin-bottom: 30px;
   border-radius: 8px;
   border: 1px solid;
-  padding: 15px;
   flex-basis: 0;
   flex-grow: 1;
 }
@@ -16,6 +15,12 @@
 @media (prefers-color-scheme: dark) {
   .chat-gpt-container {
     border-color: #3c4043;
+  }
+  .chat-gpt-container .prefix {
+    color: white;
+  }
+  .chat-gpt-container #answer {
+    background-color: #202124;
   }
 }
 
@@ -31,6 +36,7 @@
 .chat-gpt-container .loading {
   color: #b6b8ba;
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  padding: 15px;
 }
 
 @keyframes pulse {
@@ -51,6 +57,8 @@
 .chat-gpt-container #answer {
   font-size: 15px;
   line-height: 1.6;
+  padding: 15px;
+  border-radius: 8px;
 }
 
 .chat-gpt-container #answer pre {
